fixed overlapping inputs css issue

--- a/web-frontend/src/components/Exercise/Search.css
+++ b/web-frontend/src/components/Exercise/Search.css
@@ -16,7 +16,7 @@
 }
 
 .exercise-search__search-input-container {
-  flex: 1 0 calc(33.3% - 5px);
+  flex: 1 0 calc(35.3% - 4px);
   margin: 5px;
   max-width: calc(33.333% - 10px);
 }
@@ -25,7 +25,8 @@
 .exercise-search__muscle,
 .exercise-search__equipment {
   width: 100%;
-  min-width: 200px;
+  padding: 2px;
+  margin: 2px;
 }
 
 .exercise-search__search-text-input.light,
@@ -45,26 +46,24 @@
 
 @media (max-width: 768px) {
   .exercise-search {
-    flex-wrap: wrap;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-  }
-  .exercise-search__filter-container {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
+    flex-wrap: nowrap;
     padding: 0;
     margin: 0;
   }
   .exercise-search__search-input-container {
-    display: flex;
-    width: 100%;
+    flex: 1;
   }
 
   input::placeholder {
     color: var(--orange);
     font-size: 0.8rem;
     width: 100%;
+    padding-left: 5px;
+  }
+  .exercise-search__search-text-input,
+  .exercise-search__muscle,
+  .exercise-search__equipment {
+    padding: 0;
+    margin: 0;
   }
 }
