--- a/web-frontend/src/components/Program/programForm.css
+++ b/web-frontend/src/components/Program/programForm.css
@@ -1,8 +1,10 @@
 .program {
   position: relative;
-  width: 700px;
-  margin-bottom: 20px;
-  padding: 10px 0px;
+  max-width: 700px;
+  margin: 0 auto 20px;
+  padding: 10px 0;
+
+  box-sizing: border-box;
 }
 
 .program__header {
@@ -40,17 +42,28 @@
 }
 
 .program__section {
-  display: flex;
-  align-items: center;
+  margin: 0 5px;
+  padding: 0 5px;
 }
 
 .program__section-title {
   flex-shrink: 0;
-  width: 120px;
 }
 .input-select-container {
   display: flex;
   align-items: center;
+}
+.programDuration {
+  margin-right: 10px;
+}
+
+.durationUnit {
+  margin-left: 10px;
+}
+
+.daysPerWeek {
+  margin-right: 10px;
+  padding: 5px;
 }
 
 /* Light theme specific styles */
@@ -71,8 +84,7 @@
 
 .program__section-title,
 .program__section-text {
-  margin: 10px;
-  padding-left: 10px;
+  margin: 5px;
   font-size: 18px;
   font-weight: 400;
   font-style: normal;
@@ -86,16 +98,8 @@
 }
 
 .program-name-input {
-  margin: 10px;
-  width: 100%;
   height: 60px;
   resize: none;
-}
-
-.programDuration,
-.durationUnit {
-  width: 270px;
-  margin-bottom: 5px;
 }
 
 .program-name-input.light,
@@ -122,18 +126,13 @@
 
 @media (max-width: 768px) {
   .program {
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 10px 0px;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    padding: 5px;
   }
 
   .program__header {
     display: flex;
     flex-direction: row;
-    margin: 15px 0;
+    margin: 5px 0;
   }
 
   .program__expand-btn {
@@ -172,18 +171,21 @@
     width: 100%;
   }
 
-  .programDuration,
+  .programDuration {
+    margin-right: 5px;
+  }
+
   .durationUnit {
-    width: 100%;
-    margin-bottom: 5px;
+    margin-left: 5px;
+  }
+
+  .daysPerWeek {
+    margin-right: 5px;
+    padding: 5px;
   }
 
   .mainGoal,
   .durationUnit {
     height: 40px;
-  }
-  .programDuration,
-  .daysPerWeek {
-    padding: 8px;
   }
 }
